Class file setup

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lil-gui": "^0.19.2",
+    "three": "^0.163.0",
     "vue": "^3.4.21"
   },
   "devDependencies": {
